--- a/css/main.css
+++ b/css/main.css
@@ -99,22 +99,30 @@ textarea {
 
 body {
 	background-color: #222;
-	padding: 1.625em;
+	padding: 1.25em;
 }
 
-.g-page: {margin:auto;}
+#gplusembed {
+	width: 20em;
+	margin:auto;
+}
 
 /* Define Accordion box */
 .accordion {
-    margin: 20px;
-    background-color: #e2e2e2;
-    padding: 20px;
     overflow: hidden;
+    max-width: 40em;
+    margin: auto;
 }
 
 .accordion section {
-    background-color: #ccc;
+    background-color: #1d1d1d;
     cursor: pointer;
+    padding: 0.3125em 1.25em;
+    margin: 1.25em 0;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -o-border-radius: 3px;
+    border-raduis: 3px;
 }
 
 .accordion section:hover {
