--- a/css/main.css
+++ b/css/main.css
@@ -104,18 +104,18 @@ body {
 }
 
 #gplusembed {
-	width: 20em;
+	width: 18.75em;
 	margin:auto;
 }
 
 /* Define Accordion box */
-.accordion {
+#accordion {
     overflow: hidden;
     max-width: 40em;
     margin: auto;
 }
 
-.accordion section {
+#accordion section {
     background-color: #1d1d1d;
     cursor: pointer;
     padding: 0.3125em 1.25em;
@@ -123,28 +123,51 @@ body {
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
     -o-border-radius: 3px;
-    border-raduis: 3px;
+    border-radius: 3px;
 }
 
-.accordion section:hover {
-    background-color: #666;
+#accordion section:hover, #gplusembed:hover {
+    background-color: #222;
+    -moz-box-shadow: inset 0 0 2px #ccc;
+    -webkit-box-shadow: inset 0 0 2px #ccc;
+    -o-box-shadow: inset 0 0 2px #ccc;
+    box-shadow: inset 0 0 2px #ccc;
 }
 
-.accordion section div {
+#accordion section div {
     display: none;
 }
 
-.accordion section a.slidetrigger {
+h2.slidetitle {
+    padding: 0;
+    margin: 0;
+    font-weight: normal;
+}
+
+#accordion section h2.slidetitle a {
+    display: block;
+    color: #427fed;
+    text-decoration: none;
+}
+
+#accordion section:target {
+    background-color: #ccc;
+    padding: 1em;
+}
+
+#accordion section:target div {
     display: block;
 }
 
-.accordion section:target {background-color: #666;}
-
-.accordion section:target div {
-    display: block;
-    min-height: 1px;
+aside p {
+    font-size: 0.8em;
+    background-color: #ffffff;
+    padding: 0.625em;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -o-border-radius: 3px;
+    border-radius: 3px;
 }
-
 
 
 
