--- a/css/main.css
+++ b/css/main.css
@@ -151,7 +151,7 @@ h2.slidetitle {
 }
 
 #accordion section:target {
-    background-color: #ccc;
+    background-color: #fff;
     padding: 1em;
 }
 
@@ -161,7 +161,7 @@ h2.slidetitle {
 
 aside p {
     font-size: 0.8em;
-    background-color: #ffffff;
+    background-color: #ccc;
     padding: 0.625em;
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
