--- a/css/main.css
+++ b/css/main.css
@@ -100,7 +100,7 @@ textarea {
 
 body {
 	background-color: #333;
-	padding: 1.25em;
+	padding: 1.25em 0;
 }
 
 #gplusembed {
@@ -116,7 +116,7 @@ body {
 }
 
 #accordion section {
-    background-color: #1d1d1d;
+    background-color: #427fed;
     cursor: pointer;
     padding: 0.3125em 1.25em;
     margin: 1.25em 0;
@@ -146,7 +146,7 @@ h2.slidetitle {
 
 #accordion section h2.slidetitle a {
     display: block;
-    color: #427fed;
+    color: #ffffff;
     text-decoration: none;
 }
 
@@ -159,6 +159,10 @@ h2.slidetitle {
     display: block;
 }
 
+#accordion section:target h2.slidetitle a {
+    color: #427fed;
+}
+
 aside p {
     font-size: 0.8em;
     background-color: #ccc;
@@ -169,9 +173,18 @@ aside p {
     border-radius: 3px;
 }
 
-
-
-
+a.bigbutton {
+    background-color: #DD4B39;
+    text-decoration: none;
+    font-weight: bold;
+    color: #ffffff; 
+    padding: 0.625em;
+    display: inline-block;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -o-border-radius: 3px;
+    border-radius: 3px;
+}
 
 
 
