--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,7 @@ textarea {
    ========================================================================== */
 
 body {
-	background-color: #333;
+	background-color: #e3e3e3;
 	padding: 1.25em 0;
 }
 
